v0.10.2/_sources/generated/statsmodels.tsa.arima_process.ArmaProcess.rst.txt
statsmodels.tsa.arima\_process.ArmaProcess
==========================================

.. currentmodule:: statsmodels.tsa.arima_process

.. autoclass:: ArmaProcess

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ArmaProcess.acf
         ArmaProcess.acovf
         ArmaProcess.arma2ar
         ArmaProcess.arma2ma
         ArmaProcess.from_coeffs
         ArmaProcess.from_estimation
         ArmaProcess.generate_sample
         ArmaProcess.impulse_response
         ArmaProcess.invertroots
         ArmaProcess.pacf
         ArmaProcess.periodogram



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ArmaProcess.arroots
         ArmaProcess.isinvertible
         ArmaProcess.isstationary
         ArmaProcess.maroots

