v0.15.0/_sources/generated/statsmodels.tsa.arima_process.ArmaProcess.rst.txt
statsmodels.tsa.arima\_process.ArmaProcess
==========================================

.. currentmodule:: statsmodels.tsa.arima_process

.. autoclass:: ArmaProcess
   :exclude-members: acf,acovf,arma2ar,arma2ma,from_coeffs,from_estimation,from_roots,generate_sample,impulse_response,invertroots,pacf,periodogram,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ArmaProcess.acf
      ~ArmaProcess.acovf
      ~ArmaProcess.arma2ar
      ~ArmaProcess.arma2ma
      ~ArmaProcess.from_coeffs
      ~ArmaProcess.from_estimation
      ~ArmaProcess.from_roots
      ~ArmaProcess.generate_sample
      ~ArmaProcess.impulse_response
      ~ArmaProcess.invertroots
      ~ArmaProcess.pacf
      ~ArmaProcess.periodogram
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ArmaProcess.arroots
      ~ArmaProcess.isinvertible
      ~ArmaProcess.isstationary
      ~ArmaProcess.maroots
   
   
   